[package]
name = "btasks"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { versino = "0.4", features = ["serde"] }
dirs = "4.0"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
pulldown-cmark = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }

[profile.release]
lto = "fat"
